--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "goit-react-hw-01-components",
+  "name": "goit-react-hw-04-movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
-    "gh-pages": "^2.1.1",
     "normalize.css": "^8.0.1",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
@@ -21,8 +20,7 @@
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
     "lint:format": "prettier src/**/*.{js,css,json} --write",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +50,5 @@
     "npm": "^6.13.2",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2"
-  },
-  "homepage": "https://irinalysenko21.github.io/goit-react-hw-04-movies/"
+  }
 }
